--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
-<div>
-    <h1>
-        Three things I hope to gain from this course:
-    </h1>
-    <ol>
-        <li>I am aiming to get some coding knowledge.</li>
-        <li>I want to get better at networking and have crucial problem solving skills.</li>
-        <li>I want to understand the ins and outs of a computer since it is the main part of modern life.</li>
-    </ol>
-</div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Peyton Merritt's Portfolio Page</title>
+        <link rel="icon" type="image/png" href="images/favicon.png" />
+    </head>
+    <div>
+        <img src="images/Palace.jpg" width="600" />
+    </div>
+    <div>
+        <h2>About Me</h2>
+        <p>I am attending Oregon state University for a degree in computer science with an emphasis on Software Engineering. I enjoy the outdoors and hanging out with people, I am interested in video games in my free time as well as developing a solution to problems through personal coding projects.</p>
+    </div>
+    <div>
+        <h2>Experience</h2>
+        <p>I am working on GitHub portfolio, I am also working on adding more too my own website to represent my skills and experience.</p>
+    </div>
+    <div>
+        <h2>Skills</h2>
+        <p>I am working on getting more problem solving skills by doing work in class, I am also working on being able to code in python and my teamwork and leadership skills.</p>
+    </div>
+    <div>
+        <h2>Projects</h2>
+        <p>I am not currently working on any projects, I have wrote pseudocode to make a sandwich in a pre made code.</p>
+    </div>
+    <div>
+        <h2>Repositories</h2>
+        <p>https://github.com/PeytonM30/PeytonM30.github.io</p>
+    </div>
+    <div>
+        <h2>Education</h2>
+        <p>I am working on graduating Oregon state Cascades with a bachelors degree in computer science, I also graduated High school with a 3.65 and in C.S.F.</p>
+    </div>
+    <div>
+        <h2>Awards</h2>
+        <p>I was apart of C.S.F for 3 years and got a special sash during High school graduation</p>
+    </div>
+    <div>
+        <h2>Social Media</h2>
+        <p>My github is https://github.com/PeytonM30 and my Instagram is peytonm1030</p>
+    </div>
+    <div>
+        <h2>Contact Me</h2>
+        <p>Email: <a href="mailto:merritpe@oregonstate.edu" target="_blank">merritpe@oregonstate.edu</a></p>
+    </div>
+    <body>
+        <a target="_blank" href="https://icons8.com/icon/RpspyEyOEJOU/world-map">World Map</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+    </body>
+</html>
