--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <title>Peyton Merritt's Portfolio Page</title>
         <link rel="icon" type="image/png" href="images/favicon.png" />
+            <link rel="stylesheet" href="css/style.css">
     </head>
     <div>
-        <img src="images/Palace.jpg" width="600" />
+        <img id="profilepic" src="images/Palace.jpg" />
     </div>
     <div>
         <h2>About Me</h2>
